--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 :root {
-    --primary: #86B817;
-    --secondary: #FE8800;
+    --primary: #4C9DB0;
+    --secondary: #FFEBAF;
     --light: #F5F5F5;
     --dark: #14141F;
 }
